Update packages and resolve #14: * Resolve #14 (Ditto DPS+ is `NaN`) by providing special case when "Transform" is the quick move * Tweaked display of results table on small screens for better consistency * NPM package updates for vulnerabilities

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -55,8 +55,8 @@
 }
 
 .results-container-xs {
-  margin: 2px 0px;
   width: 100%;
+  padding: 16px 8px;
 }
 
 .results-table {
